# xpsdeeplearning

./: .gitattributes  .gitignore  .pylintrc  AUTHORS  LICENSE  README.md  colab-requirements.txt  dev-environment.yaml  dev-requirements.txt  environment.yaml  environment.yml  optimization_prob.ipynb  out  predict_unknown.ipynb  predict_unknown_multiple.ipynb  prepare_upload.py  pyproject.toml  requirements.txt  talos_optimization.ipynb  train.ipynb  train_colab.ipynb  train_colab_multiple.ipynb  train_colab_single.ipynb  train_local.ipynb  train_local_mutliple.ipynb  train_local_single.ipynb  train_multiple.ipynb  train_prob.ipynb  train_single.ipynb  transfer_learning.ipynb  transfer_learning_multiple.ipynb  transfer_learning_single.ipynb
.github/workflows/: publish.yaml  pylint.yaml  pytest.yaml
augmentation/: base_model.py  combine_hdf5.py  convert_measured.py  convert_measured_references.py  creator.py  default_params.json  json_to_hdf5.py  load_test.py  params_template.json  poisson_noise_test.py  run.py  run_full.py  simulation.py  simulator.py  upload_to_db.py
augmentation/base_model/: figures.py  peaks.py  scatterers.py  spectra.py
data/: Fe2O3.txt  Fe3O4.txt  FeO.txt  Fe_metal.txt  O2 loss function.csv  scatterers.json
data/measured/: EX502-506 Fe, Ni, Co mixed oxides.vms  Fe2O3.txt  FeO.txt
examples/: README.md  predict_params.json  train_params.json
network/: classifier.py  classifier_colab.py  classifier_cpu.py  data_handling.py  exp_logging.py  models.py  optimization.py  prepare_upload.py  remove_nans.py  train.py  train_colab.ipynb  train_cpu.ipynb  train_mnist.py  train_single.py  unbenannt1.py  utils.py  visualization.py
notebooks/: poisson_test.ipynb  predict.ipynb  predict_bayesian.ipynb  predict_without_ground_truth.ipynb  predict_wo_colab.ipynb  talos_optimization.ipynb  train.ipynb  train_prob.ipynb  transfer_learning.ipynb
pubplots/: class_distribution_plot.py  common.py  fit_multiple_elements.py  maes_single_elements.py  multiple_elements_loss_examples.py  multiple_elements_peak_fitting_histograms.py  multiple_elements_references.py  peak_fitting_plot.py  peak_fitting_validation.py  plot_all.py  plot_class_distribution.py  ref_multiple_elements.py  references.py  sample_size_effect.py  sim_values_effect.py  sim_visualization.py  simulate_dataset_for_fit_comparison.py  single_elements_cnn_histograms.py  single_elements_fit_comparison_histograms.py  single_elements_loss.py  single_elements_peak_fitting.py  single_elements_references.py  single_examples.py  single_spectrum.py  success_and_fail_examples.py  training_plot.py  uncertainty.py  window.py
scripts/: generate_python_dependencies.sh
simulation/: combine_hdf5.py  convert_measured.py  creator.py  default_params.json  json_to_hdf5.py  load_test.py  peakfinder.py  run.py  sim.py  sim_visualization.py  test.py
tests/: test_classifier.py  test_data_loader.py  test_simulation.py
utils/: combine_hdf5.py  convert_measured.py  json_to_hdf5.py  loading_data.py  peakfinder.py  remove_nans.py
(+221 files in other folders)
